syntax = "proto3";

package messenger;

option go_package = "./proto";

service ChatService {
    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
    // DeleteChat
    // SendMessage
    // SendMessage
    // GetMessages stream
}

message CreateChatRequest {
    string username = 1;
}

message CreateChatResponse {
    uint64 chat_id = 1;
}